# paycheck

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build_docker.sh  favicon.ico.br  index.html  main.css  main.css.br  main.js.br  start_docker_debug.sh  start_validator.sh
assets/dioxus/: dioxus-wallet-adapter.js  dioxus-wallet-adapter.js.br  paycheck-bot-me_bg.wasm  paycheck-bot-me_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-9ac3b5e174d5b843/: inline0.js
bot/: Cargo.toml
bot/src/: main.rs
dioxus/: dioxus-wallet-adapter_bg.wasm  dioxus-wallet-adapter_bg.wasm.br
dioxus/snippets/dioxus-interpreter-js-9ac3b5e174d5b843/: inline0.js.br
mpl-macros/: Cargo.toml
mpl-macros/src/: assertions.rs
paycheck/: Cargo.toml
paycheck/src/: consts.rs  entrypoint.rs  error.rs  lib.rs  processor.rs  state.rs  utils.rs
paycheck/src/instructions/: close_paycheck.rs  create_paycheck.rs  execute_paycheck.rs  mod.rs
paycheck/tests/: close_paycheck.rs  create_paycheck.rs  execute_paycheck.rs  functional.rs  setup.rs  utils.rs
src/: error.rs  lib.rs  processor.rs
src/instructions/: create_config.rs  mod.rs
tests/: functional.rs
web/: Cargo.toml  Dioxus.toml
web/assets/: main.css
web/localnet-accounts/: bot.json  bsol.json  tick_array_0.json  tick_array_1.json  tick_array_2.json  token_vault_a.json  token_vault_b.json  user.json  user2_bsol_account.json  user_bsol_account.json  whirlpool.json
web/src/: main.rs
web/src/hooks/: use_wallet_adapter.rs
whirlpools-state/: Cargo.toml
whirlpools-state/src/: lib.rs
