[workspace]
members = [
    "mpl-macros",
    "paycheck",
 	"whirlpools-state",
	"web",
    "bot"]
resolver = "2"

[workspace.dependencies]
solana-program = "=1.18.23"
solana-sdk = "=1.18.23"
solana-client = "=1.18.23"
dotenv = "0.15.0"
paycheck = { path = "./paycheck", version = "0.1.0" }
borsh = { version = "1.5.1", features = ["derive"] }
spl-token = { version = "3", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3", features = ["no-entrypoint"]}
whirlpools-state = { path = "./whirlpools-state", version = "0.1.0" }