[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk.workspace = true
paycheck.workspace = true
solana-client.workspace = true
solana-account-decoder.workspace = true
dotenv.workspace = true
borsh.workspace = true
spl-associated-token-account.workspace = true
spl-token.workspace = true
whirlpools-state.workspace = true
chrono.workspace = true