[package]
name = "paycheck"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = { version = "1.5.1", features = ["derive"] }
solana-program = "2.0.9"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "5.0.1", features = ["no-entrypoint"]}
thiserror = "1.0.63"
num-traits = "0.2.19"
mpl-macros = { path = "../mpl-macros" }

[dev-dependencies]
solana-program-test = "2.0.9"
solana-sdk= "2.0.9"
termcolor = "=1.4.0"
once_cell = "1.19.0"


[lib]
crate-type = ["cdylib", "lib"]
