[package]
name = "paycheck"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = { version = "1.5.1", features = ["derive"] }
solana-program = "1.18"
spl-token = { version = "3", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3", features = ["no-entrypoint"]}
thiserror = "1.0.63"
num-traits = "0.2.19"
mpl-macros = { path = "../mpl-macros" }
whirlpools-state = { path = "../whirlpools-state" }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk= "1.18"
termcolor = "=1.4.0"
once_cell = "1.19.0"


[lib]
crate-type = ["cdylib", "lib"]
