[package]
name = "paycheck"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh.workspace = true
solana-program.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
thiserror = "1.0.63"
num-traits = "0.2.19"
mpl-macros = { path = "../mpl-macros" }
whirlpools-state.workspace = true

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk.workspace = true
termcolor = "=1.4.0"
once_cell = "1.19.0"


[lib]
crate-type = ["cdylib", "lib"]
