[package]
name = "paycheck-wev"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["solana"]

[dependencies]
async-std = "1.12.0"
base64 = "0.22.1"
bincode = "1.3.3"
dioxus = { git = "https://github.com/dioxuslabs/dioxus", rev = "ffa36a6", features = ["web"] }
dioxus-logger = { version = "0.5.1" }
solana-client-wasm = { version = "1.18", path = "../../solana-playground/wasm/solana-client" }
solana-extra-wasm = { version = "1.18", path = "../../solana-playground/wasm/utils/solana-extra" }
solana-sdk = "1.18"
paycheck = { path = "../paycheck" }
web-time = "1.0.0"
tracing = { version = "0.1.40" }
serde_json = "1.0.118"
borsh = "1.5.1"
termcolor = "=1.4.0"


